--- a/tools/index.html
+++ b/tools/index.html
@@ -173,7 +173,7 @@
 <ul>
   <li>Tool submission: <strong>Friday January 14</strong></li>
   <li>Benchmark results communicated to authors: <strong>Friday February 25</strong></li>
-  <li>Submission of camera-ready paper: <strong>March 18</strong></li>
+  <li>Submission of camera-ready paper: <strong>Sunday March 18</strong></li>
 </ul>
 
         <div class="section">
