--- a/program/index.html
+++ b/program/index.html
@@ -142,7 +142,7 @@
                           time of the workshop, we ask that author presentations be <em>pre-recorded</em>.  Authors are still welcome to present live.
                         </p>
                         <p class="paper-title">
-                        Similar to last year, we will also live-stream SBST2022 via <a href="https://www.twitch.tv/mrdoktorprofessor" target="_blank">Twitch</a>.
+                        Similar to last year, we will also live-stream SBST2022 via <a href=" https://www.twitch.tv/koxp" target="_blank">Twitch</a>.
                         </p>
                       </td>
                     </tr>
@@ -190,7 +190,9 @@
             <div class="section section-team text-center">
               <div class="container">
                 <h2 class="title">Workshop Program</h2>
-                <h3>All times UTC</h3>
+                <h3>TBA</h3>
+
+                <!-- <h3>All times UTC</h3>
                 <div class="row">
                   <table class="program-table">
                     <tr>
@@ -205,7 +207,8 @@
                         <p class="paper-title">Live Keynote</p><br>
                         <p class="paper-authors">Paolo Tonella</p><br>
                         <p class="paper-affiliation">Università della Svizzera Italiana, Switzerland</p><br />
-                        <!--<a href="https://speakerdeck.com/robertfeldt/sbst-for-ai-and-beyond" target="_blank">» Slides</a>-->
+                        <a href="https://speakerdeck.com/robertfeldt/sbst-for-ai-and-beyond" target="_blank">» Slides</a>
+                
 
                       </td>
                     </tr>
@@ -481,7 +484,7 @@
                       </td>
                     </tr>
                   </table>
-                </div>
+                </div> -->
               </div>
             </div>
 
