fixed some minor things

--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -145,13 +145,13 @@
                     <div class="row">
                       <div class="col-sm">
                         <div class="team-player">
-                          <img src="/img/headshots/alessio2.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                          <img src="/img/questionmark.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                           <!-- <img src="/img/headshots/marc.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                           <img src="/img/headshots/pascale.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised"> -->
 
 
-                          <h4 class="title">Alessio Gambi</h4>
-                          <p class="category text-primary">Université Polytechnique Hauts-de-France</p>
+                          <!-- <h4 class="title">Alessio Gambi</h4>
+                          <p class="category text-primary">Université Polytechnique Hauts-de-France</p> -->
                           <h4>TBA</h4>
                           <!-- <p class="category text-primary">Simulation-based Testing using <a href="http://beamng.tech/" target="_blank">BeamNG.tech</a></p>
                           <p class="text-left">
