--- a/organisation/index.html
+++ b/organisation/index.html
@@ -158,7 +158,7 @@
                     <div class="team-player">
                         <img src="/img/gunel.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                         <h5>Gunel Jahangirova</h5>
-                        <p class="category text-primary">Università della Svizzera Italiana, Italy</p>
+                        <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
                         <a href="https://sites.google.com/view/guneljahangirova" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
                         <!-- <a href="https://twitter.com/erik_fredericks" class="btn btn-primary btn-icon btn-round"><i class="fa fa-twitter"></i></a> -->
                     </div>
@@ -168,8 +168,8 @@
                   <div class="team-player">
                       <img src="/img/vincenzo.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                       <h5>Vincenzo Riccio</h5>
-                      <p class="category text-primary">University of Lugano, Switzerland</p>
-                      <a href="" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
+                      <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
+                      <a href="https://p1ndsvin.github.io" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
                   </div>
               </div>
               <div class="col-md-3">
@@ -202,9 +202,9 @@
             </div>
     <br><br>
             <div class="container">
-                <h2 class="subtitle">Program Committee</h2>
+                <h2 class="subtitle text-center">Program Committee</h2>
 		<div class="table-condensed">
-		<table>
+		<table class="committee-table">
 			<tr><td><a href="http://dc.exa.unrc.edu.ar/staff/naguirre">Nazareno Aguirre</a>, Universidad Nacional de Río Cuarto - CONICET, Argentina</td></tr>
       <tr><td><a href="https://research.monash.edu/en/persons/aldeida-aleti">Aldeida Aleti</a>, Monash University,  Australia</td></tr>
       <tr><td><a href="http://www.antoniol.net/">Giuliano Antoniol</a>, Ecole Polytechnique de Montréal, Canada</td></tr>
