Added Panel tab

--- a/program/index.html
+++ b/program/index.html
@@ -58,6 +58,13 @@
             </a>
           </li>
 
+          <li class="nav-item">
+          <a class="nav-link" href="/panel/" data-target="/panel/">
+            <i class='fa fa-comments'></i>
+            <span>SBST vs Fuzzing Panel</span>
+          </a>
+        </li>     
+
 
 
           <li class="nav-item">
