Added PC member

--- a/organisation/index.html
+++ b/organisation/index.html
@@ -232,6 +232,7 @@
       <tr><td><a>Silvia Regina</a>, University of Leicester, UK</td></tr>
 			<tr><td><a href="https://bv.fapesp.br/en/pesquisador/33625/simone-do-rocio-senger-de-souza/">Simone do Rocio Senger de Souza</a>, University of São Paulo, Brasil</td></tr>
 			<tr><td><a href="https://thomas-vogel.github.io/">Thomas Vogel</a>, Humboldt-Universität zu Berlin, Germany</td></tr>
+      <tr><td><a href="https://sites.google.com/view/jie-zhang/home">Jie Zhang</a>, University College London, UK</td></tr>
       <!--
 			<tr><td><a href="https://coinse.kaist.ac.kr/members/shin.yoo/">Shin Yoo</a>, Korea Advanced Institute of Science and Technology, Republic of Korea</td></tr>
       -->
