Added twitter, Sponsor, and updated some personal info

--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -169,7 +169,7 @@
                       <div class="team-player">
                         <img src="/img/rgopinath.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                         <h4 class="title">Rahul Gopinath</h4>
-                        <p class="category text-primary">University of Sydney, Australia</p>
+                        <p class="category text-primary">CISPA Helmholtz Center for Information Security, Germany</p>
                         <p class="category text-primary">Learning and Refining Input Grammars for Effective Fuzzing</p>
                         <!--<p><a href="" target="_blank">» Slides</a></p>-->
                         <p class="text-left">
