--- a/panel/index.html
+++ b/panel/index.html
@@ -177,7 +177,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="team-player">
-                                                <img src="/img/lbriand.jpg" alt="Thumbnail Image"
+                                                <img src="/img/briand.jpg" alt="Thumbnail Image"
                                                     class="rounded-circle img-fluid img-raised profile-picture">
                                                 <h4>Prof. Lionel Briand</h4>
                                                 <p class="category text-primary">University of Ottawa, University of Luxembourg</p>
