Justify text and fixed links in org

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div class="section">
             <div class="container">
               <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 text-justify">
                   <!-- <h4 class="subsection"><a href="https://youtu.be/ZpWOdyySPLo" target="_blank">Our livestream is now available!</a>  Thanks to all who participated!</h4> -->
                   <!-- <h5 class="subsection">SBST2022 will be held via Zoom for participants.  We will also be livestreaming SBST22 via Twitch!</h5> -->
                   <!--<h4 class="subsection"><a href="https://youtu.be/AH0hp7BtLH4" target="_blank">Livestream of SBST20</a></h4>-->
@@ -201,7 +201,7 @@
                   <h6 class="text-primary">Camera Ready Due</h6>
                   <p>Sunday March 18 2022</p>
                   <h5>Submission Guidelines</h5>
-                  <p>All submissions must conform to the <a
+                  <p class="text-justify">All submissions must conform to the <a
                       href="https://conf.researchr.org/track/icse-2022/icse-2022-papers#Call-for-Papers">ICSE&rsquo;22
                       formatting and submission instructions</a>. <b>All submissions must be anonymized</b>, in PDF
                     format and should be performed electronically through EasyChair.</p>
