--- a/panel/index.html
+++ b/panel/index.html
@@ -135,7 +135,7 @@
                             <div class="container">
                                 <h1>Discussion Panel</h1>
                                 <h2 class="subtitle">SBST vs Fuzzing - Intersections and Differences</h2>
-                                <p>We plan to hold a discussion panel (duration of one hour and a half long) entitled
+                                <p class="text-justify">We plan to hold a discussion panel (duration of one hour and a half long) entitled
                                     "Fuzzing vs SBST - Intersections and Differences".
                                     The goal of this panel is to have a ground for discussion on the main similarities
                                     and differences between the Fuzzing and SBST communities.
