Fixed from ninth to tenth tool competition

--- a/tools/index.html
+++ b/tools/index.html
@@ -127,7 +127,7 @@
   
 <h2 class="title">Tool Competition</h2>
 
-<p>This year as well we are pleased to announce the nineth edition of the unit testing tool competition. The competition has the goal to experiment with testing tools for a diversified set of traditional and emerging systems and domains.</p>
+<p>This year as well we are pleased to announce the tenth edition of the testing tool competition. The competition has the goal to experiment with testing tools for a diversified set of traditional and emerging systems and domains.</p>
 
 <p><strong>Java tool competition</strong>: As for recent years, we invite researchers to participate in the competition with their unit test generation tool for <strong><em>Java</em></strong>. Tools will be evaluated against a benchmark with respect to code coverage and mutation score.</p>
 
