Added profile-picture to pictures

--- a/organisation/index.html
+++ b/organisation/index.html
@@ -130,7 +130,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="team-player">
-                                <img src="/img/gguizzo.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                                <img src="/img/gguizzo.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                                 <h4>Giovani Guizzo</h4>
                                 <p class="category text-primary">University College London, United Kingdom</p>
                                 <a href="https://sites.google.com/view/giovaniguizzo/home" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -138,7 +138,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="team-player">
-                                <img src="/img/sebastiano.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                                <img src="/img/sebastiano.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                                 <h4>Sebastiano Panichella</h4>
                                 <p class="category text-primary">Zurich University of Applied Science, Switzerland</p>
                                 <a href="https://spanichella.github.io" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="team-player">
-                        <img src="/img/alessio.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                        <img src="/img/alessio.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                         <h5>Alessio Gambi</h5>
                         <p class="category text-primary">University of Passau, Germany</p>
                         <a href="https://staff.fim.uni-passau.de/~gambi/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -163,7 +163,7 @@
                   </div>
                 <div class="col-md-3">
                     <div class="team-player">
-                        <img src="/img/gunel.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                        <img src="/img/gunel.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                         <h5>Gunel Jahangirova</h5>
                         <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
                         <a href="https://sites.google.com/view/guneljahangirova" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -173,7 +173,7 @@
 
                 <div class="col-md-3">
                   <div class="team-player">
-                      <img src="/img/vincenzo.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                      <img src="/img/vincenzo.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                       <h5>Vincenzo Riccio</h5>
                       <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
                       <a href="https://p1ndsvin.github.io" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -181,7 +181,7 @@
               </div>
               <div class="col-md-3">
                   <div class="team-player">
-                      <img src="/img/fiorella.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                      <img src="/img/fiorella.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                       <h5>Fiorella Zampetti</h5>
                       <p class="category text-primary">University of Sannio, Italy</p>
                       <a href="" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
@@ -198,7 +198,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="team-player">
-                                <img src="/img/rebecca.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
+                                <img src="/img/rebecca.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised profile-picture">
                                 <h4>Rebecca Moussa</h4>
                                 <p class="category text-primary">University College London, United Kingdom</p>
                                 <a href="http://www-dept.cs.ucl.ac.uk/people/R.Moussa.html" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
