--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ other aspects of the software engineering lifecycle.</p>
                         <div class="col-md-4">
                             <h4  class="subsection">Important Dates</h4>
                             <p>Adhering to <a href="https://conf.researchr.org/track/icse-2022/icse-2022-Workshops">ICSE&rsquo;22 workshop dates</a> (<a href="https://www.timeanddate.com/time/zones/aoe">AOE</a>):</p>
-                            <p><a>Printable Flyer</a></p>
+                            <p><a href= "/SBST22_Flyer.pdf">Printable Flyer</a></p>
                             <p><a href="/SBST22_CFP.pdf">Printable Call for Papers</a></p>
                             <!--<h6 class="text-primary">Video Links Submission</h6>
                             <p><b style="color:red;">Wednesday 24 June 2020</b></p>-->
