Updated the keynote abstract and tool e-mails

--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -141,11 +141,21 @@
                           class="rounded-circle img-fluid img-raised">
                         <h4 class="title">Paolo Tonella</h4>
                         <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
-                        <p class="category text-primary">Recent Advances in SBST</p>
+                        <p class="category text-primary">Deep Learning Testing</p>
                         <!--<p><a href="" target="_blank">» Slides</a></p>-->
                         <p class="text-justify">
                           <strong>Abstract</strong>:
-                          TBA
+                          Deep neural networks have outperformed classical techniques in domains such as natural
+                          language processing, computer vision and speech recognition. They found several real world
+                          applications, ranging from autonomous vehicles to medical diagnosis. Correspondingly, the need
+                          for testing approaches to ensure their dependability and quality has increased.
+                          <br/> <br/>
+                          In recent years, we have seen an exponential growth in the number of research papers that
+                          address various aspects of deep learning testing. In this seminar, I will describe a selected
+                          set of core problems in the field. In particular, I will focus on the reasons why such
+                          problems differ from the corresponding, traditional testing ones. I will present some of the
+                          solutions that appeared recently in the area and I will comment on the issues ("elephants in
+                          the room") that still affect the existing approaches.
                         </p>
                         <p class="text-justify">
                           <strong>Biography</strong>: Paolo Tonella is Full Professor at the Faculty of Informatics and
