Changed the dates and order of panelists

--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@
                   <!-- <h6 class="text-primary">Video Submission</h6>
                             <p><b style="color:#f93232;">Monday 17 May 2021</b></p> -->
                   <h6 class="text-primary">Paper Submission</h6>
-                  <p>Friday January 14 2022</p>
+                  <p><s>Friday January 14 2022</s></p>
+                  <p>Friday January 21 2022</p>
                   <h6 class="text-primary">Competition Report</h6>
-                  <p>Friday January 14 2022</p>
+                  <p><s>Friday January 14 2022</s></p>
+                  <p>Friday January 21 2022</p>
                   <!-- <p><b><del>Tuesday 12 January 2021</del></b></p> -->
                   <h6 class="text-primary">Notification to Authors</h6>
                   <p>Friday February 25 2022</p>
