--- a/panel/index.html
+++ b/panel/index.html
@@ -135,7 +135,8 @@
                             <div class="container">
                                 <h1>Discussion Panel</h1>
                                 <h2 class="subtitle">SBST vs Fuzzing - Intersections and Differences</h2>
-                                <p class="text-justify">We plan to hold a discussion panel (duration of one hour and a half long) entitled
+                                <p class="text-justify">We plan to hold a discussion panel (duration of one hour and a
+                                    half long) entitled
                                     "Fuzzing vs SBST - Intersections and Differences".
                                     The goal of this panel is to have a ground for discussion on the main similarities
                                     and differences between the Fuzzing and SBST communities.
@@ -152,22 +153,9 @@
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="team-player">
-                                                <img src="/img/mharman.jpg" alt="Thumbnail Image"
-                                                    class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Prof. Mark Harman</h4>
-                                                <p class="category text-primary">Meta & University College London,
-                                                    United
-                                                    Kingdom</p>
-                                                <a target="_blank" href="http://www0.cs.ucl.ac.uk/staff/M.Harman/"
-                                                    class="btn btn-primary btn-icon btn-round"><i
-                                                        class="fa fa-id-card-o"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="team-player">
                                                 <img src="/img/zeller.jpg" alt="Thumbnail Image"
                                                     class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Prof. Andreas Zeller</h4>
+                                                <h4>Andreas Zeller</h4>
                                                 <p class="category text-primary"> CISPA Helmholtz Center for Information
                                                     Security & Saarland University, Germany</p>
                                                 <a target="_blank" href="https://andreas-zeller.info/"
@@ -177,23 +165,59 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="team-player">
+                                                <img src="/img/apanichella.jpg" alt="Thumbnail Image"
+                                                    class="rounded-circle img-fluid img-raised profile-picture">
+                                                <h4>Annibale Panichella</h4>
+                                                <p class="category text-primary">Delft University of Technology,
+                                                    Netherlands</p>
+                                                <a target="_blank" href="https://apanichella.github.io/"
+                                                    class="btn btn-primary btn-icon btn-round"><i
+                                                        class="fa fa-id-card-o"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="team-player">
                                                 <img src="/img/briand.jpg" alt="Thumbnail Image"
                                                     class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Prof. Lionel Briand</h4>
-                                                <p class="category text-primary">University of Ottawa, University of Luxembourg</p>
+                                                <h4>Lionel Briand</h4>
+                                                <p class="category text-primary">University of Ottawa, University of
+                                                    Luxembourg</p>
                                                 <a target="_blank" href="https://www.lbriand.info/"
                                                     class="btn btn-primary btn-icon btn-round"><i
                                                         class="fa fa-id-card-o"></i></a>
                                             </div>
                                         </div>
-                                    </div>
+                                        <div class="col-md-4">
+                                            <div class="team-player">
+                                                <img src="/img/mbohme.jpg" alt="Thumbnail Image"
+                                                    class="rounded-circle img-fluid img-raised profile-picture">
+                                                <h4>Marcel Böhme</h4>
+                                                <p class="category text-primary">Max Planck Institute for Security and
+                                                    Privacy, Germany</p>
+                                                <a target="_blank" href="https://mboehme.github.io/"
+                                                    class="btn btn-primary btn-icon btn-round"><i
+                                                        class="fa fa-id-card-o"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="team-player">
+                                                <img src="/img/mharman.jpg" alt="Thumbnail Image"
+                                                    class="rounded-circle img-fluid img-raised profile-picture">
+                                                <h4>Mark Harman</h4>
+                                                <p class="category text-primary">Meta & University College London,
+                                                    United
+                                                    Kingdom</p>
+                                                <a target="_blank" href="http://www0.cs.ucl.ac.uk/staff/M.Harman/"
+                                                    class="btn btn-primary btn-icon btn-round"><i
+                                                        class="fa fa-id-card-o"></i></a>
+                                            </div>
+                                        </div>
 
-                                    <div class="row">
                                         <div class="col-md-4">
                                             <div class="team-player">
                                                 <img src="/img/mcohen.jpg" alt="Thumbnail Image"
                                                     class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Prof. Myra Cohen</h4>
+                                                <h4>Myra Cohen</h4>
                                                 <p class="category text-primary"> Iowa State University, USA</p>
                                                 <a target="_blank" href="https://faculty.sites.iastate.edu/mcohen/"
                                                     class="btn btn-primary btn-icon btn-round"><i
@@ -204,34 +228,10 @@
                                             <div class="team-player">
                                                 <img src="/img/tonella-img.jpg" alt="Thumbnail Image"
                                                     class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Prof. Paolo Tonella</h4>
-                                                <p class="category text-primary">Università della Svizzera Italiana, Switzerland</p>
+                                                <h4>Paolo Tonella</h4>
+                                                <p class="category text-primary">Università della Svizzera Italiana,
+                                                    Switzerland</p>
                                                 <a target="_blank" href="https://www.inf.usi.ch/faculty/tonella/#/"
-                                                    class="btn btn-primary btn-icon btn-round"><i
-                                                        class="fa fa-id-card-o"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <div class="team-player">
-                                                <img src="/img/mbohme.jpg" alt="Thumbnail Image"
-                                                    class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Dr. Marcel Böhme</h4>
-                                                <p class="category text-primary">Max Planck Institute for Security and Privacy, Germany</p>
-                                                <a target="_blank" href="https://mboehme.github.io/"
-                                                    class="btn btn-primary btn-icon btn-round"><i
-                                                        class="fa fa-id-card-o"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <div class="team-player">
-                                                <img src="/img/apanichella.jpg" alt="Thumbnail Image"
-                                                    class="rounded-circle img-fluid img-raised profile-picture">
-                                                <h4>Dr. Annibale Panichella</h4>
-                                                <p class="category text-primary">Delft University of Technology, Netherlands</p>
-                                                <a target="_blank" href="https://apanichella.github.io/"
                                                     class="btn btn-primary btn-icon btn-round"><i
                                                         class="fa fa-id-card-o"></i></a>
                                             </div>
@@ -240,7 +240,6 @@
                                 </div>
                             </div>
                             <br>
-
                         </div>
                     </div>
                 </div>
