--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h1 class="title">SBST 2022</h1>
           <div class="text-center">
             <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
-            <h5>May 19-20, 2022, Pittsburgh, PA, USA</h5>
+            <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
             <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
                 class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop"
               class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
