added list of accepted papers and tools

--- a/program/index.html
+++ b/program/index.html
@@ -130,8 +130,38 @@
           <div class="col-md-8 ml-auto mr-auto text-left">
 
             <div class="section section-team text-center">
+
               <div class="container">
-                <h2 class="title">Workshop Format</h2>
+                <h2 class="subtitle text-center">Accepted Papers & Tools</h2>
+		<div class="table-condensed">
+		<table class="committee-table">
+			<tr><td><a target="_blank">Wasserstein Generative Adversarial Networks for Online Test Generation for Cyber Physical Systems</a> <br> <h3 class="paper-authors-accepted">Jarkko Peltomäki, Frankie Spencer and Ivan Porres</h3></td> </tr>
+			<tr><td><a target="_blank">A Comparative Evaluation on the Quality of Manual and Automatic Test Case Generation Techniques for Scientific Software - A Case Study of a Python Project for Material Science Workflows</a> <br> <h3 class="paper-authors-accepted">Daniel Trübenbach, Sebastian Müller and Lars Grunske</h3></td> </tr>
+			<tr><td><a target="_blank">Towards Run-Time Search for Real-World Multi-Agent Systems</a> <br> <h3 class="paper-authors-accepted">Abigail Diller and Erik M. Fredericks</h3></td> </tr>
+      <tr><td><a target="_blank">Learning to Rank for Test Case Prioritization</a> <br> <h3 class="paper-authors-accepted">Safa Omri and Carsten Sinz</h3></td> </tr>
+      <tr><td><a target="_blank">EvoSuite</a> <br> <h3 class="paper-authors-accepted">Gordon Fraser</h3></td> </tr>
+      <tr><td><a target="_blank">Kex at the 2022 SBST Tool Competition</a> <br> <h3 class="paper-authors-accepted">Azat Abdullin, Marat Akhin, Mikhail Belyaev</h3></td> </tr>
+      <tr><td><a target="_blank">BBC</a> <br> <h3 class="paper-authors-accepted">Xavier Devroey, Pouria Derakhshanfar</h3></td> </tr>
+      <tr><td><a target="_blank">UtBot & UtBot-Mocks</a> <br> <h3 class="paper-authors-accepted">Dmitry Ivanov, Denis Fokin, Menshutin Alexey</h3></td> </tr>
+      <tr><td><a target="_blank">AdaFrenetic</a> <br> <h3 class="paper-authors-accepted">SongYang Yan, Ming Fan</h3></td> </tr>
+      <tr><td><a target="_blank">Dmytro Humeniuk</a> <br> <h3 class="paper-authors-accepted">AmbieGen</h3></td> </tr>
+      <tr><td><a target="_blank">FeneticV</a> <br> <h3 class="paper-authors-accepted">Ezequiel Castellano, Paolo Arcaini, Stefan Klikovits, Xiaoyi Zhang, Ahmet Cetinkaya, CÉDRIC Ho Thanh</h3></td> </tr>
+      <tr><td><a target="_blank">GenRL</a> <br> <h3 class="paper-authors-accepted">AmbieGen</h3></td> </tr>
+      <tr><td><a target="_blank">EvoMBT</a> <br> <h3 class="paper-authors-accepted">Raihana Ferdous, Chia-kang Hung, Fitsum Meshesha Kifetew, Davide Prandi and Angelo Susi</h3></td> </tr>
+      <tr><td><a target="_blank">Wogan</a> <br> <h3 class="paper-authors-accepted">Jarkko Peltomäki</h3></td> </tr>
+
+
+
+		</table>
+                </div>
+            </div>
+
+
+
+
+
+              <div class="container">
+                <h2 class="subtitle text-center">Workshop Format</h2>
                 <div class="row">
                   <table class="program-table">
                     <tr>
@@ -196,7 +226,7 @@
 
             <div class="section section-team text-center">
               <div class="container">
-                <h2 class="title">Workshop Program</h2>
+                <h2 class="subtitle text-center">Workshop Program</h2>
                 <h3>TBA</h3>
 
                 <!-- <h3>All times UTC</h3>
